Make api version to be read from war-s manifest
Signed-off-by: Max Shaposhnik <mshaposh@redhat.com>